<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SinVoiceDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">title</string>
    <string name="myTextView1">myTextView1</string>
    <string name="myTextView2">myTextView2</string>
    <string name="myTextView3">myTextView3</string>
    <string name="start_play">startPlay</string>
    <string name="stop_play">stopPlay</string>
    <string name="start_rec">startRec</string>
    <string name="stop_rec">stopRec</string>
    <string name="Data">HELLO</string>
</resources>